--- a/Joy.html
+++ b/Joy.html
@@ -115,7 +115,7 @@ The left JoyStick (in red square) is an example that use default parametrs, the 
 		</div>
     
 		<script type="module">
-      import { JoyStick } from './joy.js';
+      import { JoyStick } from './Joy.esm.js';
 // Create JoyStick object into the DIV 'joy1Div'
 //var Joy1 = new JoyStick('joy1Div');
 
